change InMemoryTaskManager createMethods for tests